tests/compile-fail/integration__integration__general__reg_in_unsupported_lang.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: non-constant expression in language without registers
   ┌─ <input>:15:20
   │
15 │         textSet(0, $REG[0], "cheese");
   │                    ^^^^^^^ non-const expression


